Automatically backed up by Learn

--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,3 +19,10 @@ body #wall #tag-2{
   display: none;
 }
 
+body #wall .parent :last-child #tag-6 {
+  display: none;
+}
+
+body #wall .parent > #tag-7.slick {
+  display: none;
+}
