--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -19,10 +19,9 @@ body #wall #tag-2{
   display: none;
 }
 
-body #wall .parent :last-child #tag-6 {
+#wall .parent :last-child #tag-6 {
   display: none;
 }
-
-body #wall .parent > #tag-7.slick {
+#wall .parent > #tag-7.slick {
   display: none;
 }
